Add NX to the global tools

--- a/run_once_before_3-install-packages-darwin.sh.tmpl
+++ b/run_once_before_3-install-packages-darwin.sh.tmpl
@@ -15,4 +15,8 @@ brew bundle
 volta install node
 
 # Install latest versions of global Node.js packages
-npm install -g stylelint@latest textlint@latest typescript@latest
+npm install -g\
+  stylelint@latest\
+  textlint@latest\
+  typescript@latest\
+  nx@latest
