Add LFS support to Git

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -38,3 +38,9 @@
     name = {{ .fullname }}
     email = {{ .gitemail }}
     signingkey = {{ .gpgkey }}
+
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
