Update apps and extensions

--- a/private_Library/private_Application Support/private_Code/User/settings.json.tmpl
+++ b/private_Library/private_Application Support/private_Code/User/settings.json.tmpl
@@ -125,6 +125,10 @@
   "[helm]": {
     "editor.formatOnSave": false
   },
+  "[prisma]": {
+    "editor.defaultFormatter": "Prisma.prisma",
+    "editor.formatOnSave": true
+  },
   "[terraform]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "hashicorp.terraform"
